# ClassMate

./: .env.example  .gitignore  FrontEndScript.js  Script.js  Style.css  __init__.py  endpoints.py  main.py  manifest.json  pyproject.toml  requirements.txt  setup.py  vector_db_cache.pkl
CanvasAI/: .gitignore  README.md  requirements.txt
CanvasAI/backend/data_retrieval/: data_handler.py  get_all_user_data.py
CanvasAI/backend/task_specific_agents/: calendar_agent.py
CanvasAI/chat-bot/: conversation.py
CanvasAI/user_data/psu/7195664/: user_data.json
CanvasAI/user_data/psu/7210330/: user_data.json
ClassMate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Fast_API_Connectors/: connectors.py
FrontEnd/: FrontEndScript.js  FrontEndStyle.css
Front_End/: Fast_API_Endpoints.py  Front_End_Connections.js  Front_End_Script.js  Front_End_Style.css  Python_Vercel_ConnectionsTEST.py  main.py  manifest.json  tester.js
UserData/'fhttps:/psu.instructure.com/api/v1'/1234/: user_data.json
UserData/PSU/1234/: user_data.json
backend/: canvas_file_search.py  get_all_data.py  get_all_user_data._v1.py  get_all_user_data.py  get_all_user_data_v3.py  get_user_data_v2.py  get_user_info_v2  popup_functionality.py  prompt_to_file_GPT.py
backend/data_retrieval/: data_handler.py  get_all_user_data.py
backend/task_specific_agents/: calendar_agent.py  grade_calculator_agent.py  lecture_to_notes.py  lecture_to_notes_agent.py  prompt_to_file_GPT.py
cache/: vector_db_cache.pkl
canvas_rag/: __init__.py  canvas_api.py  config.py  db.py  rag.py
chat-bot/: conversation.py
chat_bot/: context_retrieval.py  conversation_handler.py
chatbot/: conversation.py
docs/: README.md
media_output/psu/7146525/: latexoutput.tex
new_pipeline/: requirements.txt
pipeline/: README.md  assignment_to_contents.py  canvas_api.py  canvas_copilot.py  categorization.py  pipeline.py  vector_db_cache.pkl  vectordatabase.py
src/backend/chat_bot/: conversation_handler.py
src/backend/dashboard/data/: canvas_data_provider.py
src/backend/data_retrieval/: data_handler.py  get_all_user_data.py
src/backend/task_specific_agents/: grade_calculator_agent.py
src/database/vectordb/: content_extraction.py  db.py  filters.py  post_process.py
src/database/vectordb/testing/: create_test_courses.py  test_data_organization.py  test_helpers.py
src/extension/: Front_End_Script.js  Front_End_Style.css
tests/: evan_test.py  test_endpoints.py
todo/: Qdrant.todo  dashboard.todo
user_data/CanvasAI/UserData/psu.instructure.com/1234/: evan_data.json  user_data2.json
user_data/psu/7195664/: user_data.json
user_data/psu/7210330/: user_data.json
user_data/psu/7214035/: user_data.json
vectordb/: bm25_scorer.py  content_extraction.py  db.py  embedding_model.py  filters.py  post_process.py  query.py  test_db.py  text_processing.py  vectordatabase.py
vectordb/testing/: create_test_courses.py  extensive_test_data.py  test_data_organization.py  test_db.py  test_helpers.py
vectordb/testing/test_results/2025-06-26_03:24_PM/: search_results_summary.json  user_data.json
vectordb/testing/test_results/2025-06-26_03:45_PM/: search_results_summary.json  user_data.json
vectordb/testing/test_results/2025-06-26_03:57_PM/: search_results_summary.json  user_data.json
vectordb/testing/test_results/2025-06-27_04:02_PM/: search_results_summary.json  user_data.json
vectordb/testing/test_results/2025-06-27_04:06_PM/: search_results_summary.json  user_data.json
