[project]
name = "classmate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asgiref==3.8.1",
    "async-timeout==5.0.1",
    "attrs==18.2.0",
    "backoff==2.2.1",
    "bcrypt==4.3.0",
    "beautifulsoup4==4.13.3",
    "build==1.2.2.post1",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "coloredlogs==15.0.1",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "durationpy==0.9",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.11",
    "filelock==3.18.0",
    "flatbuffers==25.2.10",
    "frozenlist==1.5.0",
    "fsspec==2025.3.0",
    "google-auth==2.38.0",
    "googleapis-common-protos==1.69.2",
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "h11==0.14.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.7",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "huggingface-hub==0.29.3",
    "humanfriendly==10.0",
    "hyperframe==6.1.0",
    "idna==3.10",
    "importlib-metadata==8.6.1",
    "importlib-resources==6.5.2",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jiter==0.9.0",
    "joblib==1.4.2",
    "kubernetes==32.0.1",
    "libmagic==1.0",
    "lxml==5.3.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mmh3==5.1.0",
    "monotonic==1.6",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "mypy==1.16.0",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy>=2.0.2",
    "oauthlib==3.2.2",
    "onnxruntime==1.19.2",
    "openai==1.67.0",
    "opentelemetry-api==1.31.0",
    "opentelemetry-exporter-otlp-proto-common==1.31.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.31.0",
    "opentelemetry-instrumentation==0.52b0",
    "opentelemetry-instrumentation-asgi==0.52b0",
    "opentelemetry-instrumentation-fastapi==0.52b0",
    "opentelemetry-proto==1.31.0",
    "opentelemetry-sdk==1.31.0",
    "opentelemetry-semantic-conventions==0.52b0",
    "opentelemetry-util-http==0.52b0",
    "orjson==3.10.15",
    "overrides==7.7.0",
    "packaging==24.2",
    "pathspec==0.12.1",
    "pdflatex==0.1.3",
    "pillow==11.1.0",
    "pluggy==1.6.0",
    "portalocker==2.10.1",
    "posthog==3.21.0",
    "propcache==0.3.0",
    "protobuf==5.29.4",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pymupdf==1.25.4",
    "pypdf2==3.0.1",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pytesseract==0.3.13",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
    "python-dateutil==2.9.0.post0",
    "python-docx==1.1.2",
    "python-dotenv==1.0.1",
    "python-magic==0.4.27",
    "python-pptx==1.0.2",
    "pyyaml==6.0.2",
    "qdrant-client==1.13.3",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rich==13.9.4",
    "rsa==4.9",
    "ruff==0.11.12",
    "safetensors==0.5.3",
    "sentence-transformers==3.4.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "starlette==0.46.1",
    "sympy==1.13.1",
    "tenacity==9.0.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.1",
    "tomli==2.2.1",
    "torch==2.6.0",
    "tqdm==4.67.1",
    "transformers==4.49.0",
    "typer==0.15.2",
    "typing-extensions==4.12.2",
    "tzlocal==5.3.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "uvloop==0.21.0",
    "watchfiles==1.0.4",
    "websocket-client==1.8.0",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "xlsxwriter==3.2.2",
    "yarl==1.18.3",
    "zipp==3.21.0",
]
